Ajout services de Login
Rajout de la redirection vers la pages landing
Rajout et gestion du Logout
Ajout du chemin pour le dashboard, de la page et du module correspondant
Ajour d'une image pour la page Landing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,13 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <!-- Ajout au menu le boutton logout -->
+          <ion-item (click)="logout()">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>
+              Logout
+            </ion-label>
+          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
