--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -5,17 +5,28 @@
 </ion-header>
 <ion-content>
   <ion-card class="welcome-card">
-    <ion-img src="/assets/shapes.svg"></ion-img>
+    <ion-img src="/assets/dansewp.jpg"></ion-img>
     <ion-card-header>
-      <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Welcome to Ionic 4 Auth</ion-card-title>
+      <ion-card-subtitle>L'Aventure Commence</ion-card-subtitle>
+      <ion-card-title>Club de Danse de Chalon</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p>Starting point for Ionic 4 Application with Authentication.</p>
+      <p>Préparez vous à l'aventure avec l'application Officielle du notre Club de danse.</p>
     </ion-card-content>
+    <ion-toolbar>
+      <ion-row>
+        <ion-col>
+          <ion-button color="primary" expand="full" color="primary" (click)="login()">Login</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button color="primary" expand="full" color="danger" (click)="register()">Register</ion-button>
+        </ion-col>
+      </ion-row>
+  </ion-toolbar>
   </ion-card>
 </ion-content>
-<ion-footer>
+<!-- Ci jamais on prefere avoir le menu de connection en footer -->
+<!-- <ion-footer>
   <ion-toolbar>
       <ion-row>
         <ion-col>
@@ -26,4 +37,4 @@
         </ion-col>
       </ion-row>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
